# ni-car-search

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup-inside-lxc.sh  setup-lxc.sh
carsearch/: __main__.py  base.py  catalogue.py  dedup.py  display.py  runner.py  snapshot.py
carsearch/scrapers/: __init__.py  autotrader.py  carsni.py  gumtree.py  motors.py  nivehiclesales.py  usedcarsni.py
web/: __main__.py  app.py  config.py  db.py  models.py  notify.py  scheduler.py  scrape_job.py
web/static/: app.js  index.html  style.css
