[project]
name = "ni-car-search"
version = "0.2.0"
description = "Search NI car listing sites simultaneously from the CLI"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "playwright>=1.40",
    "playwright-stealth>=2.0",
    "rich>=13.0",
]

[project.scripts]
carsearch = "carsearch.__main__:main"
