[project]
name = "ni-car-search"
version = "0.2.0"
description = "Search NI car listing sites simultaneously from the CLI"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "playwright>=1.40",
    "playwright-stealth>=2.0",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.scripts]
carsearch = "carsearch.__main__:main"
